[package]
name = "discv5"
authors = ["Age Manning <Age@AgeManning.com>"]
edition = "2018"
version = "0.3.1"
description = "Implementation of the p2p discv5 discovery protocol"
license = "Apache-2.0"
repository = "https://github.com/sigp/discv5"
readme = "./README.md"
keywords = ["peer-to-peer", "libp2p", "networking", "discovery", "discv5"]
categories = ["network-programming", "asynchronous"]
exclude = [".gitignore", ".github/*"]

[dependencies]
enr = { version = "0.10", features = ["k256", "ed25519"] }
tokio = { version = "1", features = ["net", "sync", "macros", "rt"] }
libp2p = { version = "0.52", features = ["ed25519", "secp256k1"], optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }
futures = "0.3"
uint = { version = "0.9", default-features = false }
rlp = "0.5"
# This version must be kept up to date do it uses the same dependencies as ENR
hkdf = "0.12" 
hex = "0.4"
fnv = "1"
arrayvec = "0.7"
rand = { version = "0.8", package = "rand" }
socket2 = "0.4"
smallvec = "1"
parking_lot = "0.11"
lazy_static = "1"
aes = { version = "0.7", features = ["ctr"] }
aes-gcm = "0.9"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lru = "0.12"
hashlink = "0.8"
delay_map = "0.3"
more-asserts = "0.3"

[dev-dependencies]
rand_07 = { package = "rand", version = "0.7" }
quickcheck = "0.9"
tokio = { version = "1", features = ["full"] }
rand_xorshift = "0.3"
rand_core = "0.6"
clap = { version = "4", features = ["derive"] }
if-addrs = "0.10"

[features]
libp2p = ["dep:libp2p"]
serde = ["enr/serde"]
