[package]
name = "discv5"
authors = ["Sigma Prime <contact@sigmaprime.io>"]
edition = "2018"
version = "0.9.1"
description = "Implementation of the p2p discv5 discovery protocol"
license = "Apache-2.0"
repository = "https://github.com/sigp/discv5"
readme = "./README.md"
keywords = ["peer-to-peer", "libp2p", "networking", "discovery", "discv5"]
categories = ["network-programming", "asynchronous"]
exclude = [".gitignore", ".github/*"]

[lib]
name = "discv5"
path = "src/lib.rs"

[[bin]]
name = "discv5"
path = "src/bin/main.rs"

[dependencies]
enr = { version = "0.13.0", features = [
  "k256",
  "ed25519",
] } # enr = { version = "0.12", features = ["k256", "ed25519"] }
tokio = { version = "1", features = ["net", "sync", "macros", "rt"] }
libp2p-identity = { version = "0.2", features = [
  "ed25519",
  "secp256k1",
], optional = true }
multiaddr = { version = "0.18", optional = true }
zeroize = { version = "1", features = ["zeroize_derive"] }
futures = "0.3"
uint = { version = "0.10", default-features = false }
alloy-rlp = { version = "0.3", default-features = true }
# This version must be kept up to date do it uses the same dependencies as ENR
hkdf = "0.12"
hex = "0.4"
fnv = "1"
arrayvec = "0.7"
rand = { version = "0.8", package = "rand" }
socket2 = "0.5"
smallvec = "1"
parking_lot = "0.12"
lazy_static = "1"
aes = "0.8"
ctr = "0.9"
aes-gcm = "0.10.3"
tracing = { version = "0.1", features = ["log"] }
lru = "0.12"
hashlink = "0.9"
delay_map = "0.4"
more-asserts = "0.3"

# bin
clap = { version = "4", features = ["derive"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
eyre = "0.6.12"
cidr = "0.3.1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
if-addrs = "0.13"
quickcheck = "0.9"
rand_07 = { package = "rand", version = "0.7" }
rand_core = "0.6"
rand_xorshift = "0.3"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
libp2p = ["dep:libp2p-identity", "dep:multiaddr"]
serde = ["enr/serde"]
